fix: package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "x-course-task",
-  "homepage": "https://kattitova.github.io/X-course-task",
+  "homepage": "https://kattitova.github.io/“prometheus-x-course-task",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
